--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+2
+
+* Changed icon for Clear Button to eraser.
+* Added white fill color to bones.
+
 1
 
 Napier's bones were invented by John Napier (1550-1617), a Scottish
