--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+3
+
+* Added save/restore
+* Tune graphics to make rows more evident
+* Fixed IndexError when cleaning up overlays
+
 2
 
 * Changed icon for Clear Button to eraser.
