--- a/po/da.po
+++ b/po/da.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-08-03 10:21-0400\n"
-"PO-Revision-Date: 2016-05-15 05:06+0000\n"
+"PO-Revision-Date: 2017-02-26 01:06+0000\n"
 "Last-Translator: Chris <cjl@sugarlabs.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: da\n"
@@ -17,19 +17,19 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.1.1\n"
-"X-POOTLE-MTIME: 1463288808.000000\n"
+"X-POOTLE-MTIME: 1488071201.000000\n"
 
 #: activity/activity.info:2
 msgid "Napier"
-msgstr ""
+msgstr "Napier"
 
 #: NapierActivity.py:292
 msgid "Select a bone"
-msgstr ""
+msgstr "Vælg en knogle"
 
 #: NapierActivity.py:308
 msgid "Bones"
-msgstr ""
+msgstr "Knogler"
 
 #: NapierActivity.py:309
 msgid "Results"
@@ -37,7 +37,7 @@ msgstr "Resultater"
 
 #: NapierActivity.py:316
 msgid "Clear"
-msgstr ""
+msgstr "Ryd"
 
 #: NapierActivity.py:320
 msgid "zero"
@@ -45,7 +45,7 @@ msgstr "nul"
 
 #: NapierActivity.py:323
 msgid "one"
-msgstr ""
+msgstr "et"
 
 #: NapierActivity.py:326
 msgid "two"
