--- a/po/hr.po
+++ b/po/hr.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-08-03 10:21-0400\n"
-"PO-Revision-Date: 2016-05-15 05:01+0000\n"
-"Last-Translator: Chris <cjl@sugarlabs.org>\n"
+"PO-Revision-Date: 2017-04-30 21:30+0000\n"
+"Last-Translator: boput <bozidarp@yahoo.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: hr\n"
 "MIME-Version: 1.0\n"
@@ -18,19 +18,19 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.5.1.1\n"
-"X-POOTLE-MTIME: 1463288478.000000\n"
+"X-POOTLE-MTIME: 1493587800.000000\n"
 
 #: activity/activity.info:2
 msgid "Napier"
-msgstr ""
+msgstr "Napier"
 
 #: NapierActivity.py:292
 msgid "Select a bone"
-msgstr ""
+msgstr "Izaberi kost"
 
 #: NapierActivity.py:308
 msgid "Bones"
-msgstr ""
+msgstr "Kosti"
 
 #: NapierActivity.py:309
 msgid "Results"
@@ -38,19 +38,19 @@ msgstr "Rezultati"
 
 #: NapierActivity.py:316
 msgid "Clear"
-msgstr ""
+msgstr "Očisti"
 
 #: NapierActivity.py:320
 msgid "zero"
-msgstr ""
+msgstr "nula"
 
 #: NapierActivity.py:323
 msgid "one"
-msgstr ""
+msgstr "jedan"
 
 #: NapierActivity.py:326
 msgid "two"
-msgstr ""
+msgstr "dva"
 
 #: NapierActivity.py:329
 msgid "three"
@@ -62,7 +62,7 @@ msgstr "četiri"
 
 #: NapierActivity.py:335
 msgid "five"
-msgstr ""
+msgstr "pet"
 
 #: NapierActivity.py:338
 msgid "six"
@@ -70,12 +70,12 @@ msgstr "šest"
 
 #: NapierActivity.py:341
 msgid "seven"
-msgstr ""
+msgstr "sedam"
 
 #: NapierActivity.py:344
 msgid "eight"
-msgstr ""
+msgstr "osam"
 
 #: NapierActivity.py:347
 msgid "nine"
-msgstr ""
+msgstr "devet"
