--- a/po/ach.po
+++ b/po/ach.po
@@ -2,79 +2,78 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-08-03 10:21-0400\n"
-"PO-Revision-Date: 2016-12-16 01:35+0000\n"
-"Last-Translator: unkuiri <unkuiri@gmail.com>\n"
+"PO-Revision-Date: 2017-05-14 18:23+0000\n"
+"Last-Translator: chanchumgpa <chanchumgpa@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: pt\n"
+"Language: ach\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 2.5.1.1\n"
-"X-POOTLE-MTIME: 1481852142.000000\n"
+"X-POOTLE-MTIME: 1494786199.000000\n"
 
 #: activity/activity.info:2
 msgid "Napier"
-msgstr "Napier"
+msgstr "Taun me Newzeland"
 
 #: NapierActivity.py:292
 msgid "Select a bone"
-msgstr "Seleciona um tabuleiro"
+msgstr "Yer cogo"
 
 #: NapierActivity.py:308
 msgid "Bones"
-msgstr "Ossos"
+msgstr "Cogo mapol"
 
 #: NapierActivity.py:309
 msgid "Results"
-msgstr "Resultados"
+msgstr "Adwogi mapol"
 
 #: NapierActivity.py:316
 msgid "Clear"
-msgstr "Limpar"
+msgstr "Jwa"
 
 #: NapierActivity.py:320
 msgid "zero"
-msgstr "zero"
+msgstr "Jero"
 
 #: NapierActivity.py:323
 msgid "one"
-msgstr "um"
+msgstr "acel"
 
 #: NapierActivity.py:326
 msgid "two"
-msgstr "dois"
+msgstr "acel"
 
 #: NapierActivity.py:329
 msgid "three"
-msgstr "três"
+msgstr "adek"
 
 #: NapierActivity.py:332
 msgid "four"
-msgstr "quatro"
+msgstr "angwen"
 
 #: NapierActivity.py:335
 msgid "five"
-msgstr "cinco"
+msgstr "abic"
 
 #: NapierActivity.py:338
 msgid "six"
-msgstr "seis"
+msgstr "abicel"
 
 #: NapierActivity.py:341
 msgid "seven"
-msgstr "sete"
+msgstr "abiro"
 
 #: NapierActivity.py:344
 msgid "eight"
-msgstr "oito"
+msgstr "aboro"
 
 #: NapierActivity.py:347
 msgid "nine"
-msgstr "nove"
+msgstr "abongwen"
