--- a/po/pl.po
+++ b/po/pl.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-08-03 10:21-0400\n"
-"PO-Revision-Date: 2016-05-15 05:33+0000\n"
-"Last-Translator: Chris <cjl@sugarlabs.org>\n"
+"PO-Revision-Date: 2018-12-16 15:40+0000\n"
+"Last-Translator: KrzysztofJ <krzysztofjesz@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
@@ -18,27 +18,27 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.5.1.1\n"
-"X-POOTLE-MTIME: 1463290399.000000\n"
+"X-POOTLE-MTIME: 1544974801.000000\n"
 
 #: activity/activity.info:2
 msgid "Napier"
-msgstr ""
+msgstr "Napier"
 
 #: NapierActivity.py:292
 msgid "Select a bone"
-msgstr ""
+msgstr "Wybierz kość"
 
 #: NapierActivity.py:308
 msgid "Bones"
-msgstr ""
+msgstr "Kości"
 
 #: NapierActivity.py:309
 msgid "Results"
-msgstr ""
+msgstr "Wyniki"
 
 #: NapierActivity.py:316
 msgid "Clear"
-msgstr ""
+msgstr "Wyczyść"
 
 #: NapierActivity.py:320
 msgid "zero"
@@ -46,11 +46,11 @@ msgstr "zero"
 
 #: NapierActivity.py:323
 msgid "one"
-msgstr ""
+msgstr "jeden"
 
 #: NapierActivity.py:326
 msgid "two"
-msgstr ""
+msgstr "dwa"
 
 #: NapierActivity.py:329
 msgid "three"
@@ -66,7 +66,7 @@ msgstr "pięć"
 
 #: NapierActivity.py:338
 msgid "six"
-msgstr ""
+msgstr "sześć"
 
 #: NapierActivity.py:341
 msgid "seven"
