--- a/po/sq.po
+++ b/po/sq.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-08-03 10:21-0400\n"
-"PO-Revision-Date: 2016-12-16 01:35+0000\n"
-"Last-Translator: unkuiri <unkuiri@gmail.com>\n"
+"PO-Revision-Date: 2018-02-03 21:27+0000\n"
+"Last-Translator: Besnik_b <besnik@programeshqip.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: pt\n"
+"Language: sq\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.1.1\n"
-"X-POOTLE-MTIME: 1481852142.000000\n"
+"X-POOTLE-MTIME: 1517693251.000000\n"
 
 #: activity/activity.info:2
 msgid "Napier"
@@ -25,19 +25,19 @@ msgstr "Napier"
 
 #: NapierActivity.py:292
 msgid "Select a bone"
-msgstr "Seleciona um tabuleiro"
+msgstr "Përzgjidhni një eshtër"
 
 #: NapierActivity.py:308
 msgid "Bones"
-msgstr "Ossos"
+msgstr "Eshtra"
 
 #: NapierActivity.py:309
 msgid "Results"
-msgstr "Resultados"
+msgstr "Përfundime"
 
 #: NapierActivity.py:316
 msgid "Clear"
-msgstr "Limpar"
+msgstr "Pastroje"
 
 #: NapierActivity.py:320
 msgid "zero"
@@ -45,36 +45,36 @@ msgstr "zero"
 
 #: NapierActivity.py:323
 msgid "one"
-msgstr "um"
+msgstr "një"
 
 #: NapierActivity.py:326
 msgid "two"
-msgstr "dois"
+msgstr "dy"
 
 #: NapierActivity.py:329
 msgid "three"
-msgstr "três"
+msgstr "tre"
 
 #: NapierActivity.py:332
 msgid "four"
-msgstr "quatro"
+msgstr "katër"
 
 #: NapierActivity.py:335
 msgid "five"
-msgstr "cinco"
+msgstr "pesë"
 
 #: NapierActivity.py:338
 msgid "six"
-msgstr "seis"
+msgstr "gjashtë"
 
 #: NapierActivity.py:341
 msgid "seven"
-msgstr "sete"
+msgstr "shtatë"
 
 #: NapierActivity.py:344
 msgid "eight"
-msgstr "oito"
+msgstr "tetë"
 
 #: NapierActivity.py:347
 msgid "nine"
-msgstr "nove"
+msgstr "nëntë"
