--- a/po/uk.po
+++ b/po/uk.po
@@ -8,73 +8,74 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-08-03 10:21-0400\n"
-"PO-Revision-Date: 2016-12-16 01:35+0000\n"
-"Last-Translator: unkuiri <unkuiri@gmail.com>\n"
+"PO-Revision-Date: 2017-04-22 08:41+0000\n"
+"Last-Translator: yurchor <yurchor@ukr.net>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: pt\n"
+"Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.5.1.1\n"
-"X-POOTLE-MTIME: 1481852142.000000\n"
+"X-POOTLE-MTIME: 1492850510.000000\n"
 
 #: activity/activity.info:2
 msgid "Napier"
-msgstr "Napier"
+msgstr "Непер"
 
 #: NapierActivity.py:292
 msgid "Select a bone"
-msgstr "Seleciona um tabuleiro"
+msgstr "Виберіть паличку"
 
 #: NapierActivity.py:308
 msgid "Bones"
-msgstr "Ossos"
+msgstr "Палички"
 
 #: NapierActivity.py:309
 msgid "Results"
-msgstr "Resultados"
+msgstr "Результати"
 
 #: NapierActivity.py:316
 msgid "Clear"
-msgstr "Limpar"
+msgstr "Спорожнити"
 
 #: NapierActivity.py:320
 msgid "zero"
-msgstr "zero"
+msgstr "нуль"
 
 #: NapierActivity.py:323
 msgid "one"
-msgstr "um"
+msgstr "один"
 
 #: NapierActivity.py:326
 msgid "two"
-msgstr "dois"
+msgstr "два"
 
 #: NapierActivity.py:329
 msgid "three"
-msgstr "três"
+msgstr "три"
 
 #: NapierActivity.py:332
 msgid "four"
-msgstr "quatro"
+msgstr "чотири"
 
 #: NapierActivity.py:335
 msgid "five"
-msgstr "cinco"
+msgstr "п’ять"
 
 #: NapierActivity.py:338
 msgid "six"
-msgstr "seis"
+msgstr "шість"
 
 #: NapierActivity.py:341
 msgid "seven"
-msgstr "sete"
+msgstr "сім"
 
 #: NapierActivity.py:344
 msgid "eight"
-msgstr "oito"
+msgstr "вісім"
 
 #: NapierActivity.py:347
 msgid "nine"
-msgstr "nove"
+msgstr "дев’ять"
