--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+6
+
+* Regenerate POT file (Jui Pradhan)
+* Added and fetched new translations (Jui Pradhan)
+* Added README.md (Jui Pradhan)
+* Port to Python3 (Srevin Saju)
+* Added Screenshots (Walter Bender)
+* Added Summary and category (Walter Bender)
+* Using correct version of utilities (Walter Bender)
+
 5
 
 ENHANCEMENTS:
